tests/positive/global_memory1.c
int t;

int src(int a)
{
  t = a;
  return t;
}

int tgt(int a)
{
  t = a;
  return a;
}
